completed time series and initial validation

--- a/data-pipeline.ipynb
+++ b/data-pipeline.ipynb
@@ -566,14 +566,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sqlTxt = '''\n",
+    "DROP TYPE IF EXISTS full_stat CASCADE;\n",
+    "CREATE TYPE full_stat AS (mean float, se float, sd float, p_025 float, \n",
+    "                          p_25 float, p_50 float, p_75 float, p_975 float);\n",
+    "                          \n",
+    "                          \n",
+    "DROP TABLE IF EXISTS stan_prediction;\n",
+    "CREATE TABLE stan_prediction (\n",
+    "    player_id                   integer,\n",
+    "    permanent_tournament_id     integer,\n",
+    "    year                        integer,\n",
+    "    tag                         varchar(50),\n",
+    "    round                       integer,\n",
+    "    score                       full_stat,\n",
+    "    primary key (player_id, permanent_tournament_id, year, tag, round) \n",
+    ")\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "util.exec_sql(sqlTxt)"
+   ]
   },
   {
    "cell_type": "code",
