--- a/golf-2.0-stan.ipynb
+++ b/golf-2.0-stan.ipynb
@@ -588,7 +588,7 @@
     "}\n",
     "\n",
     "fit = pystan.stan(model_code=code, data=data, iter=4000, chains=4)\n",
-    "params = fs = fit.summary()['summary']\n",
+    "params = fit.summary()['summary']\n",
     "print fit"
    ]
   },
