--- a/golf-4.0-stan.ipynb
+++ b/golf-4.0-stan.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -18,18 +20,20 @@
    "cell_type": "code",
    "execution_count": 112,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": [
-    "num_scores = 30"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -66,56 +70,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "num_scores = 30\n",
+    "year = 2016\n",
+    "tag = '30-previous'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "\n",
     "\n",
     "sqlTxt = '''\n",
-    "select player_id from stats_view where year = 2016 limit 50;\n",
+    "select player_id from stats_view where year = %s limit 50;\n",
     "'''\n",
-    "player_ids = util.np_from_sql(sqlTxt);\n",
+    "player_ids = util.pd_from_sql(sqlTxt, [year]).as_matrix();\n",
     "\n",
     "sqlTxt = '''\n",
     "select permanent_tournament_id, (b_offset).mean as offset,\n",
     "       (b_tee).mean as tee, (b_approach).mean as approach, \n",
     "       (b_around).mean as around, (b_putting).mean as putting\n",
     "       from stan_sg_tournaments \n",
-    "       where year = 2016 \n",
+    "       where year = %s \n",
     "       and tag like 'sg-200';\n",
     "'''\n",
-    "t_df = util.pd_from_sql(sqlTxt)\n",
+    "t_df = util.pd_from_sql(sqlTxt, [year])\n",
     "sg_coef_map = t_df.set_index(['permanent_tournament_id']).T.to_dict('list')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
     "p_sqlTxt = '''\n",
-    "select name, permanent_tournament_id, round, scores.sg_tee as tee, scores.sg_approach as approach, \n",
-    "       scores.sg_around as around, scores.sg_putting as putting \n",
-    "    from scores, players \n",
+    "select player_id, permanent_tournament_id, round, sg_tee, sg_approach, \n",
+    "       sg_around, sg_putting \n",
+    "    from scores\n",
     "    where year = %s \n",
-    "      and scores.player_id = %s \n",
-    "      and scores.player_id = players.player_id\n",
-    "      and scores.sg_putting is not null\n",
+    "      and player_id = %s \n",
+    "      and sg_putting is not null\n",
+    "      and sg_tee is not null\n",
+    "      and sg_around is not null\n",
+    "      and sg_approach is not null\n",
     "      order by date;\n",
+    "'''\n",
+    "i_sqlTxt = '''\n",
+    "insert into stan_prediction values(%s, %s, %s, %s, %s, (%s, %s, %s, %s, %s, %s, %s, %s));\n",
     "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -127,147 +157,91 @@
     }
    ],
    "source": [
-    "stan_model = StanModel(model_code=code);\n",
-    "print 'done with compilation'\n",
-    "for p_id in [24502]:\n",
+    "stan_model = StanModel(model_code=code);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "for p_id in player_ids:\n",
+    "    p_id = p_id[0]\n",
     "    players_df = util.pd_from_sql(p_sqlTxt, [year, p_id])\n",
-    "    y_all = [players_df[sg].as_matrix() for sg in['tee', 'approach', 'around', 'tee'] ]\n",
+    "    y_all = [players_df[sg].as_matrix() for sg in['sg_tee', 'sg_approach', 'sg_around', 'sg_putting'] ]\n",
+    "    y_all = [ players_df['permanent_tournament_id'] , players_df['round'].as_matrix()] + y_all\n",
     "    s_coefs = [sg_coef_map[i] for i in players_df['permanent_tournament_id'].as_matrix()]\n",
-    "    for j in range(0, len (s_coefs) - num_scores):\n",
-    "        y = [y_all[m][j:j+num_scores] for m in range(0,4)]\n",
+    "    for j in range(0, len (s_coefs) - num_scores - 1):\n",
+    "        y = [y_all[m][j:j+num_scores] for m in range(2,6)]\n",
     "        s_coef = s_coefs[j+num_scores]\n",
     "        data = { 'N': len (y[0]), 'y': y, 'sg_n' : 4, 's_coef' : s_coef }\n",
     "        fit = stan_model.sampling(data=data, iter=1000, chains=4)\n",
-    "        print fit\n",
-    "        break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(0, 4):\n",
-    "    print i\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 's_coef' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-----------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-82-50d308e83f23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     34\u001b[0m     \u001b[0;34m'y'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0;34m'sg_n'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m     \u001b[0;34m's_coef'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0ms_coef\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m }\n\u001b[1;32m     38\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 's_coef' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n",
-    "data = {\n",
-    "    'N': len (y[0]),\n",
-    "    'y': y,\n",
-    "    'sg_n' : 4,\n",
-    "    's_coef' : s_coef\n",
-    "}\n",
-    "\n",
-    "fit = pystan.stan(model_code=code, data=data, iter=1000, chains=4)\n",
-    "# params = fs = fit.summary()['summary']\n",
-    "print fit"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Inference for Stan model: anon_model_5ba58b23c8ed993b96402931dd3cdf47.\n",
-      "4 chains, each with iter=1000; warmup=500; thin=1; \n",
-      "post-warmup draws per chain=500, total post-warmup draws=2000.\n",
-      "\n",
-      "                   mean se_mean     sd   2.5%    25%    50%    75%  97.5%  n_eff   Rhat\n",
-      "alpha[0,0]         0.81  5.3e-3   0.24   0.34   0.65    0.8   0.96   1.27 2000.0    1.0\n",
-      "alpha[1,0]         0.78  7.5e-3   0.34   0.12   0.56   0.78    1.0   1.44 2000.0    1.0\n",
-      "alpha[2,0]         0.43  4.0e-3   0.18   0.07   0.31   0.43   0.55   0.79 2000.0    1.0\n",
-      "alpha[3,0]         0.81  5.1e-3   0.23   0.37   0.66    0.8   0.96   1.25 2000.0    1.0\n",
-      "alpha[0,1]         0.49  4.6e-3    0.2   0.07   0.36   0.49   0.62   0.88 2000.0    1.0\n",
-      "alpha[1,1]         0.37  7.0e-3   0.31  -0.22   0.15   0.37   0.59   1.01 2000.0    1.0\n",
-      "alpha[2,1]         0.32  4.0e-3   0.18  -0.01    0.2   0.32   0.44   0.69 2000.0    1.0\n",
-      "alpha[3,1]         0.49  4.7e-3   0.21   0.07   0.35   0.49   0.63   0.91 2000.0    1.0\n",
-      "beta[0]            0.23  3.0e-3   0.12  -0.03   0.14   0.23   0.31   0.46 1727.0    1.0\n",
-      "beta[1]            0.04  2.9e-3   0.13  -0.22  -0.05   0.03   0.12    0.3 2000.0    1.0\n",
-      "beta[2]            0.15  2.8e-3   0.12   -0.1   0.07   0.16   0.24   0.39 2000.0    1.0\n",
-      "beta[3]            0.23  3.0e-3   0.13  -0.02   0.14   0.23   0.31   0.47 1785.0    1.0\n",
-      "sigma[0]           1.08  2.3e-3    0.1    0.9    1.0   1.07   1.14    1.3 2000.0    1.0\n",
-      "sigma[1]            1.8  3.7e-3   0.16   1.52   1.69   1.79    1.9   2.18 2000.0    1.0\n",
-      "sigma[2]           0.95  2.0e-3   0.09    0.8   0.89   0.94    1.0   1.14 2000.0    1.0\n",
-      "sigma[3]           1.07  2.2e-3    0.1   0.91   1.01   1.07   1.13   1.29 2000.0    1.0\n",
-      "y_tilda[0,0]       0.85    0.03   1.16  -1.56   0.11   0.86   1.58   3.19 2000.0    1.0\n",
-      "y_tilda[1,0]       0.37    0.04   1.88  -3.32  -0.84   0.32   1.63   4.11 2000.0    1.0\n",
-      "y_tilda[2,0]       0.22    0.02   0.98  -1.62  -0.45   0.23   0.89   2.13 2000.0    1.0\n",
-      "y_tilda[3,0]       0.83    0.02   1.09  -1.27   0.08   0.83   1.59   2.98 2000.0    1.0\n",
-      "y_tilda[0,1]       0.69    0.02   1.12  -1.51  -0.05   0.67   1.42   2.87 2000.0    1.0\n",
-      "y_tilda[1,1]       0.41    0.04    1.8  -3.13  -0.84   0.42   1.67    3.9 2000.0    1.0\n",
-      "y_tilda[2,1]       0.35    0.02   0.97   -1.6   -0.3   0.34   0.98   2.28 2000.0    1.0\n",
-      "y_tilda[3,1]       0.67    0.03   1.14  -1.63  -0.07   0.65   1.42   2.95 2000.0    1.0\n",
-      "y_tilda[0,2]       0.63    0.03   1.16  -1.72  -0.15   0.64   1.41   2.81 2000.0    1.0\n",
-      "y_tilda[1,2]       0.46    0.04   1.94  -3.35  -0.84   0.45   1.74   4.32 2000.0    1.0\n",
-      "y_tilda[2,2]       0.42    0.02   0.95  -1.49  -0.18   0.41   1.05   2.29 2000.0    1.0\n",
-      "y_tilda[3,2]       0.64    0.02   1.09   -1.5  -0.07   0.64   1.36   2.71 2000.0    1.0\n",
-      "y_tilda[0,3]       0.63    0.03   1.14  -1.64  -0.11   0.66   1.37   2.84 2000.0    1.0\n",
-      "y_tilda[1,3]       0.37    0.04   1.82  -3.06   -0.9   0.36   1.67   3.84 2000.0    1.0\n",
-      "y_tilda[2,3]       0.39    0.02   1.01  -1.67  -0.27   0.41   1.07   2.25 2000.0    1.0\n",
-      "y_tilda[3,3]       0.65    0.03   1.15  -1.58  -0.13   0.67   1.45   2.85 2000.0    1.0\n",
-      "score_predict[0]   69.3    0.06   2.65  64.17  67.53  69.25  71.05  74.53 2000.0    1.0\n",
-      "score_predict[1]  69.45    0.06   2.49  64.48  67.77  69.44  71.08  74.43 2000.0    1.0\n",
-      "score_predict[2]  69.42    0.06   2.64  64.18  67.68   69.4  71.26  74.58 2000.0    1.0\n",
-      "score_predict[3]  69.53    0.06   2.71  64.42  67.69  69.52  71.38  74.89 2000.0    1.0\n",
-      "lp__             -181.4    0.16   4.21 -190.5 -184.0 -180.9 -178.4 -174.1  707.0    1.0\n",
-      "\n",
-      "Samples were drawn using NUTS at Sat Aug 12 20:45:48 2017.\n",
-      "For each parameter, n_eff is a crude measure of effective sample size,\n",
-      "and Rhat is the potential scale reduction factor on split chains (at \n",
-      "convergence, Rhat=1).\n"
-     ]
-    }
-   ],
-   "source": [
-    "print fit"
+    "        params = fit.summary()['summary']\n",
+    "        args = [p_id, y_all[0][j+num_scores], year, tag, y_all[1][j+num_scores]] + params[16][:8].tolist()\n",
+    "        util.insert_sql(i_sqlTxt, args)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "sqlTxt = '''\n",
+    "select count(*) from scores s, stan_prediction p\n",
+    "where s.year = p.year\n",
+    "and s.player_id = p.player_id\n",
+    "and s.permanent_tournament_id = p.permanent_tournament_id\n",
+    "and s.round = p.round\n",
+    "and s.score > (p.score).p_25\n",
+    "and s.score < (p.score).p_75; \n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  7.11582353e+01,   6.25775377e-02,   2.79855256e+00,\n",
+       "         6.59366980e+01,   6.92076089e+01,   7.11533081e+01,\n",
+       "         7.30446051e+01,   7.68262815e+01])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params[16][:8]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -276,7 +250,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -287,7 +274,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -379,7 +368,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
