added forecast reporting

--- a/golf-2.0-stan.ipynb
+++ b/golf-2.0-stan.ipynb
@@ -688,11 +688,11 @@
     "# sqlTxt = '''\n",
     "# select * from stats_view where year = 2014 limit 100; \n",
     "# '''\n",
-    "# df = util.pd_from_sql(sqlTxt)\n",
-    "# # foo = plt.errorbar(range(0, top_players), df['avg_score'][0:top_players], df['std_score'][0:top_players], linestyle='None', marker='^')\n",
-    "# foo = plt.errorbar(range(0, top_players), avg_score[0:top_players] + offset, df['std_score'][0:top_players], linestyle='None', marker='^')\n",
-    "# foo = plt.errorbar(range(0, top_players), avg_score[0:top_players] + offset, std_score[0:top_players], linestyle='None', marker='^')\n",
-    "# print np.mean(std_score), np.mean(df['std_score']) \n"
+    "df = util.pd_from_sql(sqlTxt)\n",
+    "# foo = plt.errorbar(range(0, top_players), df['avg_score'][0:top_players], df['std_score'][0:top_players], linestyle='None', marker='^')\n",
+    "foo = plt.errorbar(range(0, top_players), avg_score[0:top_players] + offset, df['std_score'][0:top_players], linestyle='None', marker='^')\n",
+    "foo = plt.errorbar(range(0, top_players), avg_score[0:top_players] + offset, std_score[0:top_players], linestyle='None', marker='^')\n",
+    "print np.mean(std_score), np.mean(df['std_score']) \n"
    ]
   }
  ],
