--- a/golf-4.0-stan.ipynb
+++ b/golf-4.0-stan.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -80,12 +80,12 @@
    "source": [
     "num_scores = 30\n",
     "year = 2016\n",
-    "tag = '30-previous'"
+    "tag = '30-prev-sg-50'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -106,7 +106,7 @@
     "       (b_around).mean as around, (b_putting).mean as putting\n",
     "       from stan_sg_tournaments \n",
     "       where year = %s \n",
-    "       and tag like 'sg-200';\n",
+    "       and tag like 'sg-50';\n",
     "'''\n",
     "t_df = util.pd_from_sql(sqlTxt, [year])\n",
     "sg_coef_map = t_df.set_index(['permanent_tournament_id']).T.to_dict('list')"
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": true,
