basic score analysis and renaming

--- a/multi-scores-analysis.ipynb
+++ b/multi-scores-analysis.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -18,7 +20,9 @@
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -43,16 +47,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# offset = np.mean([round(means[i][0],2) for i in range(0,num_tournaments)])\n",
+    "# print offset\n",
+    "# top_players = 20\n",
+    "# avg_score = [round(means[i][0],2) for i in range(num_tournaments+num_players,num_tournaments+2*num_players)]\n",
+    "# std_score = [round(means[i][0],2) for i in range(num_tournaments,num_tournaments+num_players)]\n",
+    "# sqlTxt = '''\n",
+    "# select * from stats_view where year = 2014 limit 100; \n",
+    "# '''\n",
+    "df = util.pd_from_sql(sqlTxt)\n",
+    "# foo = plt.errorbar(range(0, top_players), df['avg_score'][0:top_players], df['std_score'][0:top_players], linestyle='None', marker='^')\n",
+    "foo = plt.errorbar(range(0, top_players), avg_score[0:top_players] + offset, df['std_score'][0:top_players], linestyle='None', marker='^')\n",
+    "foo = plt.errorbar(range(0, top_players), avg_score[0:top_players] + offset, std_score[0:top_players], linestyle='None', marker='^')\n",
+    "print np.mean(std_score), np.mean(df['std_score']) "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -161,7 +183,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -170,7 +194,9 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -257,7 +283,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
