--- a/sg-regression-stan.ipynb
+++ b/sg-regression-stan.ipynb
@@ -16375,7 +16375,6 @@
     "    }\n",
     "     y[n] ~ normal((x[n])*(b[t[n]])', sigma);\n",
     "  }\n",
-    " \n",
     "}\n",
     "\n",
     "\"\"\"\n",
@@ -16396,21 +16395,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def create_stat(parm, i, offset):\n",
-    "    i += offset\n",
-    "    return (round(parm[i][0],3), round(parm[i][1],3), round(parm[i][2],3))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "collapsed": true,
@@ -16424,26 +16408,15 @@
     "    'permanent_tournament_id': pd.Series([tournament_map_reverse[i+1] for i in t_range]),\n",
     "    'tag': pd.Series([tag for i in t_range]),\n",
     "    'year' : pd.Series([year for i in t_range]),\n",
-    "    'b_offset': pd.Series([create_stat(params, i, 0) for i in t_range]),\n",
-    "    'b_tee': pd.Series([create_stat(params, i, num_tournaments) for i in t_range]),\n",
-    "    'b_approach': pd.Series([create_stat(params, i, 2*num_tournaments) for i in t_range]),\n",
-    "    'b_around': pd.Series([create_stat(params, i, 3*num_tournaments) for i in t_range]),\n",
-    "    'b_putting': pd.Series([create_stat(params, i, 4*num_tournaments) for i in t_range])\n",
+    "    'b_offset': pd.Series([util.create_stat(params, i, 0) for i in t_range]),\n",
+    "    'b_tee': pd.Series([util.create_stat(params, i, num_tournaments) for i in t_range]),\n",
+    "    'b_approach': pd.Series([util.create_stat(params, i, 2*num_tournaments) for i in t_range]),\n",
+    "    'b_around': pd.Series([util.create_stat(params, i, 3*num_tournaments) for i in t_range]),\n",
+    "    'b_putting': pd.Series([util.create_stat(params, i, 4*num_tournaments) for i in t_range])\n",
     "}\n",
     "t_stats = pd.DataFrame(d)\n",
     "t_stats.to_sql(name= 'stan_sg_tournaments', con= util.golf_engine, if_exists= 'append', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
