--- a/ts-forecast-stan.ipynb
+++ b/ts-forecast-stan.ipynb
@@ -93,8 +93,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "sqlTxt = '''\n",
     "select player_id from stats_view where year = %s limit 50;\n",
     "'''\n",
@@ -191,76 +189,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "sqlTxt = '''\n",
-    "select count(*) from scores s, stan_prediction p\n",
-    "where s.year = p.year\n",
-    "and s.player_id = p.player_id\n",
-    "and s.permanent_tournament_id = p.permanent_tournament_id\n",
-    "and s.round = p.round\n",
-    "and s.score > (p.score).p_25\n",
-    "and s.score < (p.score).p_75; \n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  7.11582353e+01,   6.25775377e-02,   2.79855256e+00,\n",
-       "         6.59366980e+01,   6.92076089e+01,   7.11533081e+01,\n",
-       "         7.30446051e+01,   7.68262815e+01])"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "params[16][:8]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
@@ -312,8 +240,8 @@
     }
    ],
    "source": [
-    "\n",
-    "code = '''\n",
+    "# first cut model to test....\n",
+    "draft_code = '''\n",
     "data {\n",
     "    int<lower=1> T;\n",
     "    real y[T];\n",
