--- a/score-data-analysis.ipynb
+++ b/score-data-analysis.ipynb
@@ -85,6 +85,8 @@
    "execution_count": 74,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -130,7 +132,7 @@
     }
    ],
    "source": [
-    "w_series = widgets.Dropdown(options=['select player'] + get_players(), value='select player', description='forecast:',disabled=False)\n",
+    "w_series = widgets.Dropdown(options=['select player'] + util.get_players(), value='select player', description='forecast:',disabled=False)\n",
     "w_series.observe(plot_series, 'value')\n",
     "display(w_series)"
    ]
@@ -139,7 +141,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -170,23 +174,16 @@
     "        and p.name like %s\n",
     "        order by date;\n",
     "        '''\n",
-    "    return util.pd_from_sql(sql_txt, [name])\n",
-    "\n",
-    "def get_players():\n",
-    "    sql_txt = '''\n",
-    "        select name \n",
-    "        from stats_view\n",
-    "        where year = 2016\n",
-    "        limit 50;\n",
-    "    '''\n",
-    "    return util.pd_from_sql(sql_txt)['name'].as_matrix().tolist()"
+    "    return util.pd_from_sql(sql_txt, [name])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -210,7 +207,7 @@
     "    def get_corr(name,i):\n",
     "        df = get_player_series(name)\n",
     "        return df['score'].autocorr(i)\n",
-    "    return np.mean([get_corr(p, i) for p in get_players()])"
+    "    return np.mean([get_corr(p, i) for p in util.get_players()])"
    ]
   },
   {
@@ -329,18 +326,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.13"
-  },
-  "widgets": {
-   "state": {
-    "162e7f07d360428f87d3fb708f84f14e": {
-     "views": [
-      {
-       "cell_index": 3
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
