--- a/multi-scores-stan.ipynb
+++ b/multi-scores-stan.ipynb
@@ -651,7 +651,18 @@
    },
    "outputs": [],
    "source": [
-    "\n"
+    "scores = util.pd_from_sql(sqlTxt, [year, limit])\n",
+    "num_scores = len (scores)\n",
+    "player_ids = scores['player_id'].unique()\n",
+    "num_players = len (player_ids)\n",
+    "player_map = dict(zip(player_ids, range(1,num_players + 1)))\n",
+    "player_map_reverse = dict(zip(range(1,num_players + 1), player_ids ))\n",
+    "tournament_ids = scores['permanent_tournament_id'].unique()\n",
+    "num_tournaments = len (tournament_ids)\n",
+    "tournament_map = dict(zip(tournament_ids, range(1, num_tournaments + 1)))\n",
+    "tournament_map_reverse = dict(zip(range(1, num_tournaments + 1), tournament_ids))\n",
+    "dat = sorted([[player_map[i[0]], tournament_map[i[4]], i[6]] for i in scores.as_matrix()], key = lambda (el): el[0])\n",
+    "p, t, y = zip(*dat)\n"
    ]
   }
  ],
